deploy-k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isplitapp

spec:
  selector:
    matchLabels:
      kubernetes.io/name: isplitapp
  template:
    metadata:
      labels:
        kubernetes.io/name: isplitapp
        kubernetes.io/instance: isplitapp
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports: 
            - containerPort: 9090
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              memory: "20Mi"

        - name: isplitapp
          image: 'ilaverlin/isplitapp-full:latest'
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP

          volumeMounts:
            - name: fbkey
              mountPath: /app/secret

          resources: {}

      volumes:
        - name: nginx-config
          configMap:
            name: isplitapp-nginx
        - name: fbkey
          configMap:
            name: isplitapp-fbkey
