deploy-k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isplitapp

spec:
  selector:
    kubernetes.io/name: isplitapp
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: nginx
