deploy-k8s/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: isplitapp

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`isplit.app`) || Host(`api.isplit.app`)
      kind: Rule
      services:
        - name: isplitapp
          port: 9090
  tls:
    secretName: isplitapp-tls
